--- a/index.html
+++ b/index.html
@@ -7,14 +7,71 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>HEADER</header>
-    <aside>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore illo ut repellat incidunt molestiae ducimus.</aside>
+    <aside>
+        <h1 class="titulo">Futuro.</h1>
+        <h1 class="titulo">Desenvolvedor.</h1>
+        <h1 class="titulo">Teste.</h1>
+        <h1 class="titulo">Portfolio.</h1>
+        <p>"Cursando Faculdade de Eng.Elétrica, Cursando Aulas de Inglês Particular, Cursando Desenvolvimento na " <a href="https://digitalhouse.com" target="blank" rel="noopener noreferrer">Digital House.</a>
+        </p>
+    </aside>
     <main>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam provident corrupti, eius vitae doloremque aliquam cumque quidem, dolores magni reprehenderit vel .
+        <h3 id="h3_1">.001</h3>
+        <article id="art01">
+            <img src="./assets/img/baloes.jpg" alt="placeholder" width="600" height="340">
+            <footer>
+                <div>
+                    <p>Projeto #01 | Teste Layout</p>
+                    <p class= "cliente">Cliente XYZ</p>
+                </div>
+                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <i class="fab fa-linkedin">linkedin</i>
+            </a>
+            </footer>
+        </article>
+        <article>
+            <h3>.002</h3>
+            <img src="./assets/img/Conte-me-mais.jpg" alt="placeholder" width="600" height="340">
+            <footer>
+                <div>
+                    <p>Projeto #02 | Teste Layout</p>
+                    <p class= "cliente">Cliente XYZ</p>
+                </div>
+                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <i class="fab fa-linkedin">linkedin</i>
+            </a>
+            </footer>
+        </article>
+        <article>
+            <h3>.003</h3>
+            <img src="./assets/img/Kombi.jpg" alt="placeholder" width="600" height="340">
+            <footer>
+                <div>
+                    <p>Projeto #03 | Teste Layout</p>
+                    <p class= "cliente">Cliente XYZ</p>
+                </div>
+                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <i class="fab fa-linkedin">linkedin</i>
+            </a>
+            </footer>
+        </article>
+        <article>
+            <h3>.004</h3>
+            <img src="./assets/img/RockDAy.jpg" alt="placeholder" width="600" height="340">
+            <footer>
+                <div>
+                    <p>Projeto #04 | Teste Layout</p>
+                    <p class= "cliente">Cliente XYZ</p>
+                </div>
+                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <i class="fab fa-linkedin">linkedin</i>
+            </a>
+            </footer>
+        </article>
     </main>
-    <footer>
+    <footer id="rodape">
+        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam magni a sit sed. Sed laboriosam sit rem dolor similique quas, magni sequi. Minima, eos. Nam sequi iure nesciunt quasi esse!</h3>
         <h4>Criamos a sua Escolha:</h4>
-        
     </footer>
 </body>
 </html>
