--- a/index.html
+++ b/index.html
@@ -12,66 +12,62 @@
         <h1 class="titulo">Desenvolvedor.</h1>
         <h1 class="titulo">Teste.</h1>
         <h1 class="titulo">Portfolio.</h1>
-        <p>"Cursando Faculdade de Eng.Elétrica, Cursando Aulas de Inglês Particular, Cursando Desenvolvimento na " <a href="https://digitalhouse.com" target="blank" rel="noopener noreferrer">Digital House.</a>
+        <br>
+        <p id="p_aside">"Estudante de Engenharia Elétrica, apaixonado por Rock, Cinéfolo e cursando Desenvolvimento na " <a href="https://digitalhouse.com" target="blank" rel="noopener noreferrer">Digital House.</a>
         </p>
     </aside>
     <main>
-        <h3 id="h3_1">.001</h3>
+        <h3 style="color: white;" id="h3_1">.001</h3>
         <article id="art01">
-            <img src="./assets/img/baloes.jpg" alt="placeholder" width="600" height="340">
+            <img src="./assets/img/RockDAy.jpg" alt="placeholder" width="600" height="340">
             <footer>
-                <div>
+                <div style="color: white;">
                     <p>Projeto #01 | Teste Layout</p>
                     <p class= "cliente">Cliente XYZ</p>
                 </div>
-                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
-                <i class="fab fa-linkedin">linkedin</i>
+                <a href="https://linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin">linkedin</i>
             </a>
             </footer>
         </article>
-        <article>
-            <h3>.002</h3>
-            <img src="./assets/img/Conte-me-mais.jpg" alt="placeholder" width="600" height="340">
+        <article id="art02">
+            <h3 style="color: white;" id="h3_2">.002</h3>
+            <img src="./assets/img/patriots.jpg" alt="placeholder" width="600" height="340">
             <footer>
-                <div>
+                <div style="color: white;">
                     <p>Projeto #02 | Teste Layout</p>
                     <p class= "cliente">Cliente XYZ</p>
-                </div>
-                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                </div style="color: white;">
+                <a href="https://linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin">linkedin</i>
             </a>
             </footer>
         </article>
-        <article>
-            <h3>.003</h3>
-            <img src="./assets/img/Kombi.jpg" alt="placeholder" width="600" height="340">
+        <article id="art03">
+            <h3 style="color: white;" id="h3_3">.003</h3>
+            <img src="./assets/img/elétrica.jpg" alt="placeholder" width="600" height="340">
             <footer>
-                <div>
+                <div style="color: white;">
                     <p>Projeto #03 | Teste Layout</p>
                     <p class= "cliente">Cliente XYZ</p>
                 </div>
-                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <a href="https://linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin">linkedin</i>
             </a>
             </footer>
         </article>
-        <article>
-            <h3>.004</h3>
-            <img src="./assets/img/RockDAy.jpg" alt="placeholder" width="600" height="340">
+        <article id="art04">
+            <h3 style="color: white;" id="h3_4">.004</h3>
+            <img src="./assets/img/metallica.jpg" alt="placeholder" width="600" height="340">
             <footer>
-                <div>
+                <div style="color: white;">
                     <p>Projeto #04 | Teste Layout</p>
                     <p class= "cliente">Cliente XYZ</p>
                 </div>
-                <a href="www.linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">ln
+                <a href="https://linkedin.com/in/rodrigo-machado-735b92186" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin">linkedin</i>
             </a>
             </footer>
         </article>
+        <article id="footer">Rodrigo Machado | Baseado no site <a href="http://charliewaite.me/" target="blank" rel="noonpener noreferrer" title="Acessar referência" id="referencia">charliewaite </a> | Fins exclusivamente didáticos.</article>
     </main>
-    <footer id="rodape">
-        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam magni a sit sed. Sed laboriosam sit rem dolor similique quas, magni sequi. Minima, eos. Nam sequi iure nesciunt quasi esse!</h3>
-        <h4>Criamos a sua Escolha:</h4>
-    </footer>
-</body>
 </html>
